--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /.vs/CSharpMessageQueue/v15/Server/sqlite3/storage.ide
 /.vs/CSharpMessageQueue/v15/Server/sqlite3/storage.ide-shm
 /.vs/CSharpMessageQueue/v15/Server/sqlite3/storage.ide-wal
+/CSharpMessageQueue/publish
