--- a/Client2/Client2.csproj
+++ b/Client2/Client2.csproj
@@ -6,9 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CSharpMessageQueueClient" Version="1.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CSharpMessageQueueClient\CSharpMessageQueueClient.csproj" />
   </ItemGroup>
 
 </Project>
