--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,8 @@
 /CSharpMessageQueue/publish
 /CSharpEventBus/obj
 /CSharpEventBus/bin
+/.vs/CSharpMessageQueue/v16/.suo
+/.vs/CSharpMessageQueue/v16/Server/sqlite3/db.lock
+/.vs/CSharpMessageQueue/v16/Server/sqlite3/storage.ide
+/.vs/CSharpMessageQueue/v16/Server/sqlite3/storage.ide-shm
+/.vs/CSharpMessageQueue/v16/Server/sqlite3/storage.ide-wal
