--- a/CSharpMessageQueue/appsettings.Development.json
+++ b/CSharpMessageQueue/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
-  "AllowedHosts": "http://localhost:3000",
+  "Origins": "http://localhost:3000",
   "EndPoint": "/c-sharp-message-queue",
   "Host": "http://*:7500",
   "EnableLog": true
