--- a/reactjs/my-app/package.json
+++ b/reactjs/my-app/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "dependencies": {
     "@aspnet/signalr": "^1.1.4",
+    "@aspnet/signalr-protocol-msgpack": "^1.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.0"
+    "react-scripts": "3.0.0",
+    "react-toastify": "^5.3.1",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
